# RAG_module

./: .coverage  .env.sample  AGENTS.md  ARCHITECTURE_REVIEW.md  CONTEXT.md  README.md  docker-compose.yml  doctor_patient_transcript.docx  main.py  pipeline_main.py  pyproject.toml  smoke-test.py
dashboard/: app.js  index.html  presets.json  styles.css
docs/: index.html
docs/adr/: 0001-add-chunks-atomicity.md  0001-retrieval-scores-are-raw-and-strategy-specific.md  0002-error-taxonomy-mirrors-plugin-stages-selectively.md  0003-indexing-aborts-atomically-on-stage-failure.md
docs/agents/: domain.md
docs/prds/: shape-plugin-interfaces-for-second-adapter.md  typed-error-hierarchy.md
memory_module/: README.md  __init__.py  errors.py  example_usage.py  integration_test.py  logging_config.py  logging_correlation.py  rag_pipeline.py  test_qdrant_memory.py  test_rag_pipeline.py
memory_module/chunking/: base_chunker.py  data_models.py  document_chunker.py
memory_module/embedder/: azure_open_ai_embedder.py  base_embedder.py
memory_module/factory/: chunking_factory.py  embedder_factory.py  parser_factory.py  retrieval_factory.py  vector_db_factory.py
memory_module/parser/: data_models.py  document_parser_base.py  docx_parser.py
memory_module/retrieval/: base_retrieval.py  data_models.py  similarity_retrieval.py
memory_module/storage/: __init__.py  local_storage.py  storage.py
memory_module/utils/: file_operations.py
memory_module/vector_db/: base_vector_db.py  qdrant_vector_db.py
tests/: conftest.py  test_errors.py
tests/app/: test_main_api.py
(+14 files in other folders)
